--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
+    "@analogjs/vite-plugin-angular": "~2.1.2",
+    "@analogjs/vitest-angular": "~2.1.2",
     "@angular-devkit/core": "~21.0.0",
     "@angular-devkit/schematics": "~21.0.0",
     "@angular/build": "~21.0.0",
@@ -27,6 +29,8 @@
     "@nx/eslint-plugin": "22.3.3",
     "@nx/js": "22.3.3",
     "@nx/playwright": "22.3.3",
+    "@nx/vite": "22.3.3",
+    "@nx/vitest": "22.3.3",
     "@nx/web": "22.3.3",
     "@nx/workspace": "22.3.3",
     "@playwright/test": "^1.36.0",
@@ -36,7 +40,10 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/node": "20.19.9",
     "@typescript-eslint/utils": "^8.40.0",
+    "@vitest/coverage-v8": "^4.0.0",
+    "@vitest/ui": "^4.0.8",
     "angular-eslint": "^21.0.1",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
@@ -47,6 +54,7 @@
     "tslib": "^2.3.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.40.0",
+    "vite": "^7.0.0",
     "vitest": "^4.0.8"
   }
 }
