--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@support-dashboard/models": ["libs/core/models/src/index.ts"]
+      "@support-dashboard/core/models": ["libs/core/models/src/index.ts"],
+      "@support-dashboard/core/data-access": ["libs/core/data-access/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
