--- a/apps/support-app/project.json
+++ b/apps/support-app/project.json
@@ -64,7 +64,9 @@
     },
     "test": {
       "executor": "@angular/build:unit-test",
-      "options": {}
+      "options": {
+        "watch": false
+      }
     },
     "serve-static": {
       "continuous": true,
