--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@support-dashboard/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "test": "nx run-many -t test --all"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "~21.0.0",
