--- a/apps/support-app-e2e/project.json
+++ b/apps/support-app-e2e/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/support-app-e2e/src",
+  "tags": ["type:e2e"],
   "implicitDependencies": ["support-app"],
   "// targets": "to see all targets run: nx show project support-app-e2e --web",
   "targets": {}
